added nicecoxph function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,14 @@ export(citab)
 export(ggcuminc)
 export(ggsurv)
 export(medtab)
+export(nicecoxph)
 export(survtab)
 import(cmprsk)
 import(ggplot2)
 import(survival)
+importFrom(car,Anova)
 importFrom(htmlTable,htmlTable)
 importFrom(knitr,knit_print)
 importFrom(pammtools,geom_stepribbon)
+importFrom(survival,cox.zph)
+importFrom(survival,coxph)
