updated to print tables using kable

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ import(ggplot2)
 import(survival)
 importFrom(car,Anova)
 importFrom(htmlTable,htmlTable)
-importFrom(knitr,knit_print)
+importFrom(knitr,kable)
 importFrom(pammtools,geom_stepribbon)
 importFrom(survival,cox.zph)
 importFrom(survival,coxph)
