CI plot extend to last fu per group

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(medtab)
 export(nicecoxph)
 export(survtab)
 import(cmprsk)
+import(flextable)
 import(ggplot2)
 import(survival)
 importFrom(car,Anova)
